Bug 168448 - Missing letter spacing/glyph scaling in the hyphenated lines.
Summary: Missing letter spacing/glyph scaling in the hyphenated lines.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Paragraph-Alignment 167648 168251
  Show dependency treegraph
 
Reported: 2025-09-17 15:41 UTC by László Németh
Modified: 2025-10-31 10:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
tdf168448.fodt: test document (6.69 KB, application/vnd.oasis.opendocument.text-flat-xml)
2025-09-17 20:30 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2025-09-17 15:41:43 UTC
Description:
Letter spacing and glyph scaling were disabled in hyphenated lines, because of their broken layout. Fix the layout and enable them to get better word spacing and paragraph layout.

Steps to Reproduce:
Open the test document.

Actual Results:
Big word spacing because of missing letter spacing

Expected Results:
Desired word spacing by letter spacing.


Reproducible: Always


User Profile Reset: No

Additional Info:
See Bug 168351.
Comment 1 László Németh 2025-09-17 20:30:49 UTC
Created attachment 202862 [details]
tdf168448.fodt: test document
Comment 2 Commit Notification 2025-09-17 20:59:03 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d86f68e6b845f65896c1ffc4f55d09ec48fd9840

tdf#168448 sw letter spacing: enable it + glyph scaling at hyphenation

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.