tdf#168448 sw letter spacing: enable it + glyph scaling at hyphenation

Letter spacing and glyph scaling were disabled in hyphenated lines
because of their broken layout. Now the hyphen mark is positioned
correctly at the end of the line, not before that, applying plus letter
spacing and glyph scaling on horizontal position of the hyphen portion,
and without expanding the text over the hyphen portion.

Follow-up to commit 33f20d0a0fb32bf4452c15c6ae0e7c85b2ee6d46
"tdf#168351 sw letter spacing: fix spaces in the last line",
commit 45ec7bd76196dcc60b4c2db2f6f00623ecbaf5a4
"tdf#168251 cui offapi xmloff sw glyph scaling: extend UNO/UX/ODF",
commit 3c53797210bf0a4e3ffb36ed2beac4d5ce229ff2
"tdf#167648 sw letter spacing: implement minimum letter spacing"
and commit f83a04c51056445bbf947a31c8c1866a5c30bef1
"tdf#167648 cui offapi xmloff sw: add DTP-feature maximum letter
spacing".

Change-Id: I36ec02be9afc60e1d640c40b628a786aea9a12aa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191080
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>